<resources>
    <string name="app_name">AndroidWorkshopApp1</string>
    <string name="name_tv"><b>Nombre:</b></string>
    <string name="lastname_tv"><b>Apellidos:</b></string>
    <string name="accountNumber_tv"><b>Número de Cuenta:</b></string>
    <string name="birthDate_tv"><b>Fecha de Nacimiento:</b></string>
    <string name="major_tv"><b>Carrera:</b></string>
    <string name="send_btn"><b>Envíar</b></string>
    <string name="pick_date"><b>Seleccionar fecha</b></string>
    <string name="civil">Ingeniería Civil</string>
    <string name="geomatics">Ingeniería Geomática</string>
    <string name="geophysics">Ingeniería Geofísica</string>
    <string name="geology">Ingeniería Geológica</string>
    <string name="mines">Ingeniería de Minas y Metalurgia</string>
    <string name="oil">Ingeniería Petrolera</string>
    <string name="electric">Ingeniería Eléctrica Electrónica</string>
    <string name="computer">Ingeniería en Computación</string>
    <string name="telecom">Ingeniería en Telecomunicaciones</string>
    <string name="industrial">Ingeniería Industrial</string>
    <string name="mechanics">Ingeniería Mecánica</string>
    <string name="mechatronics">Ingeniería Mecatrónica</string>
    <string name="biomedics">Ingeniería en Sistemas Biomédicos</string>
    <string name="yearsOld">años de edad</string>
    <string name="nameError">Nombre vacío</string>
    <string name="lastnameError">Apellidos vacíos</string>
    <string name="accountNumberError">Número de cuenta vacío o inválido</string>
    <string name="dateError">Fecha inválida</string>
    <string name="nameErrorHelp">Se requiere un nombre</string>
    <string name="lastnameErrorHelp">Se requiere apellidos</string>
    <string name="accountNumberErrorHelp">Se requiere número de cuenta válido</string>
    <string name="iv_pictureIamgeDescription">Imagen Ingeniería</string>
</resources>